@@ -1,6 +1,9 @@
 Version 1.6
 ------------------------------------------------------------------------------
 
+* `rbind.fill` tries harder to keep attributes, retaining the attributes from
+  the first ocurrence of each column it finds
+
 * allow arrange to work with one column data frames
 
 Version 1.5.2
